--- a/kairo.css
+++ b/kairo.css
@@ -60,7 +60,7 @@ padding-right:0px;
 padding-bottom:0px;
 width:236px;
 height:100px;
-background-image:url("../images/kairo/serif.png");
+background-image:url("./images/serif.png");
 font-size:13px;
 text-align:left;
 }
